k8s/examples/loadbalancer/ingress/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-0chan
  namespace: nullchan-dev
  annotations:
    nginx.ingress.kubernetes.io/enable-real-ip: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 0chan.1chan.cyou
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: s01.1chan.cyou
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
