k8s/examples/loadbalancer/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-0chan
  namespace: nullchan
spec:
  ingressClassName: nginx
  rules:
  - host: 0chan.cyou
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: s01.0chan.cyou
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
